# Engram

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.claude/: settings.local.json
.claude/specs/: sprint-1-skills-framework.md
.github/workflows/: ci.yml  deploy.yml
scripts/: test_bilibili.py  test_integration.py  test_review.py  test_youtube.py  test_youtube_enhanced.py
src/engram/: __init__.py  __main__.py
src/engram/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/engram/extractors/: __init__.py  article.py  base.py  bilibili.py  gemini_youtube.py  registry.py  screenshot.py  transcriber.py  youtube.py
src/engram/llm/: __init__.py  base.py  openai.py  router.py
src/engram/prompts/: __init__.py
src/engram/prompts/templates/: __init__.py
src/engram/scheduler/: __init__.py  manager.py
src/engram/skills/review/: __init__.py  coach.py  prompts.py
src/engram/storage/: __init__.py  base.py  factory.py
src/engram/storage/backends/: __init__.py
src/engram/storage/backends/obsidian/: __init__.py  backend.py  formatter.py
tests/: conftest.py
tests/test_extractors/: test_youtube.py
tests/test_storage/: test_obsidian.py
