[project]
name = "engram"
version = "0.1.0"
description = "AI-powered knowledge capture and internalization system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["ai", "knowledge-management", "telegram-bot", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-telegram-bot>=20.7",
    "openai>=1.6.0",
    "youtube-transcript-api>=1.2.0",
    "newspaper3k>=0.2.8",
    "PyPDF2>=3.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "groq>=0.4.0",
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourname/engram"
Documentation = "https://github.com/yourname/engram#readme"
Repository = "https://github.com/yourname/engram.git"
Issues = "https://github.com/yourname/engram/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
